fix: optimize hash collision matrix query
